@@ -1,3 +1,6 @@
+2006-08-27  rgareus  <robin@gareus.org>
+ - added simple Extended Window Manager Hints(EWMH) fullscreen support for XV videomode.
+
 2006-08-12  rgareus  <robin@gareus.org>
  - av_q2d - fix to compile with older 
  ffmpeg before LIBAVCODEC_BUILD 4753
